# peer-share

./: .gitignore  README.html  README.md
client-basic/: package-lock.json  package.json  webpack.config.js
client-basic/src/: index.js
holo-layer/: Cargo.toml  default.nix
holo-layer/tests/: package-lock.json  package.json  tsconfig.json
holo-layer/tests/src/: am_i_developer.ts  common.ts  index.ts  progenitor.ts  progenitors.ts  schema-tests.ts  test2agents.ts  who_am_i.ts
holo-layer/tests/src/test-data/: invalid-data.json  invalid-schema.json  valid-schema.json
holo-layer/workdir/dna/: dna.yaml  peershare.dna
holo-layer/workdir/happ/: happ.yaml  peershare.happ
holo-layer/zomes/peershare/: Cargo.toml
holo-layer/zomes/peershare/src/: lib.rs
holo-layer/zomes/peershare/src/entries/: schema.rs
holo-layer/zomes/peershare/src/entries/schema/: anchors.rs
holo-layer/zomes/peershare/src/entries/schema/test-data/: invalid-data.json  valid-data.json
holo-layer/zomes/peershare/src/helpers/: mod.rs  parser.rs  progenitor.rs  progenitors.rs  utils.rs
outlet-layer/: package-lock.json  package.json  tsconfig.json  webpack.config.js
outlet-layer/src/: AppState.ts  index.ts  router.ts
outlet-layer/src/view/: BaseComponent.ts  BaseContent.ts
outlet-layer/src/view/content/: channels.ts  home.ts  mychannel.ts  not-found.ts
outlet-layer/src/view/header/: page-header.ts  right-header.ts
outlet-layer/src/view/navigation/: sidebar-navi.ts
