[package]
name = "peershare"
version = "0.1.0"
authors = ["Hedayat Abedijoo <h.abedijoo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "peershare"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
hdk = "0.0.100"
serde = "1"
holo_hash = "0.0.2-alpha.1"
